--- a/reviews/templates/reviewsproduct.html
+++ b/reviews/templates/reviewsproduct.html
@@ -6,10 +6,9 @@
 {% block content %}
 <div class="reviews-wrapper ha">
     <div class="page-headline ha">Reviews per Product</div>
-    <div class="row row-flex">
         {% if reviews %}
         {% for review in reviews %}
-        <div class="col-xs-10 col-xs-offset-1 col-sm-offset-0 col-sm-6 col-md-4 display panel panel-default">
+        <div class="reviewcard display panel panel-default">
             <div class="panel-body">
                 <h3 class="review-headline ha"><a href="{% url 'review_detail' review.id %}">{{ review.title }}</a></h3>
                 {% if review.image %}
@@ -42,6 +41,5 @@
         {% else %}
         <p class="ha">No reviews have been found.</p>
         {% endif %}
-    </div>
 </div>
 {% endblock %}
