--- a/static/scss/_partials/landscape-desktop/pages/_productdetails-page.scss
+++ b/static/scss/_partials/landscape-desktop/pages/_productdetails-page.scss
@@ -32,7 +32,7 @@
 #to-products-btn {
     width: 48vw;
     font-size: 5.0vw;
-    background-color: orange;
+    background-color: lightblue;
     color: black;
     transition: color .3s ease-in-out;
 }
