--- a/static/scss/_partials/landscape-desktop/pages/_products-page.scss
+++ b/static/scss/_partials/landscape-desktop/pages/_products-page.scss
@@ -1,5 +1,9 @@
 .product-wrapper {
-    padding-bottom: 20vw;
+    padding: {
+        top: 2vw;
+        bottom: 25vw;
+    }
+        
     background-color: #9e988fcb;
 }
 
