--- a/cart/templates/cart.html
+++ b/cart/templates/cart.html
@@ -12,82 +12,82 @@
     <div class="page-headline ha">
         Your cart
     </div>
-    <div class="row row-flex">
-        {% if cart_items %}
-        {% for item in cart_items %}
-        <div class="col-xs-10 col-xs-offset-1 col-sm-offset-0 col-sm-6 col-md-4 display panel panel-default">
-            <div class="panel-body">
+    {% if cart_items %}
+    {% for item in cart_items %}
+    <div class="productcard display panel panel-default">
+        <div class="panel-body">
+
+            <img class="product-image" src="{{ MEDIA_URL }}{{item.product.image}}" alt="image of {{item.product.name}}">
+
+            <div class="btn-bar-wrapper">
+
                 {% if item.product.id in wishlist %}
                 <form class="wishform" method="POST" action="{% url 'remove_from_wishlist' item.product.id %}">
                     {% csrf_token %}
-                        <button class="remove-wish-btn" type="submit"><i class="fa fa-star staricon-added"></i></button>
+                    <button class="remove-wish-btn" type="submit"><i class="fa fa-star staricon-added"></i></button>
                 </form>
                 {% else %}
                 <form class="wishform" method="POST" action="{% url 'add_to_wishlist' item.product.id %}">
                     {% csrf_token %}
-                        <button class="add-wish-btn" type="submit"><i
-                                class="fa fa-star staricon-not-added"></i></button>
+                    <button class="add-wish-btn" type="submit"><i class="fa fa-star staricon-not-added"></i></button>
                 </form>
                 {% endif %}
-
-                <img class="product-image" src="{{ MEDIA_URL }}{{item.product.image}}"
-                    alt="image of {{item.product.name}}">
-
-                <h3><a class="product-headline"
-                        href="{% url 'product_detail' item.product.id %}"><b>{{item.product.name}}</b></a>
-                </h3>
-
-                <p class="product-description">{{ item.product.description|truncatewords:12 }}</p>
-                <div class="product-stats">
-                    <div class="stats-key"><i class="fa fa-eye"></i></div>
-                    <div class="stats-value">{{ item.product.view_count }}</div>
-                    <div class="stats-key"><i class="fa fa-comment"></i></div>
-                    <div class="stats-value">{{ item.product.review_count }}</div>
-                    <div class="stats-key">Sold:</div>
-                    <div class="stats-value">{{ item.product.ordered_pcs }}</div>
-                </div>
-                <br>
-                <p><b>Our price: {{ item.product.price }} EUR</b></p>
-                <form class="form-inline" method="post" action="{% url 'adjust_cart' item.id %}">
-                    {% csrf_token %}
-                    <div class="form-group">
-                        <label for="exampleInputAmount" class="sr-only">New Qty</label>
-                        <div class="input-group">
-                            <div class="input-group-addon">Qty</div>
-                            <input name="quantity" type="number" min="0" max="999" class="form-control">
-                            <div class="input-group-addon">{{item.quantity}}</div>
-                        </div>
-                    </div>
-                    <div class="amend-btn-wrapper ha">
-                        <button type="submit" class="btn btn-primary amend-btn"><span class="glyphicon glyphicon-edit"
-                                aria-hidden="true"></span> Amend</button>
-                    </div>
-                </form>
             </div>
-        </div>
-        {% endfor %}
 
-        <div class="cart-summary-wrapper ha">
+            <h3><a class="product-headline"
+                    href="{% url 'product_detail' item.product.id %}"><b>{{item.product.name}}</b></a>
+            </h3>
 
-            <div class="cart-summary">
-                {% if shippingfee == "FREE" %}
-                <p>FREE SHIPPING!</p>
-                {% else %}
-                <p class="shipping-fee ha">incl. {{shippingfee}} EUR Shipping</p>
-                {% endif %}
-                <p id="totalamount" class="ha">Total <span class="glyphicon glyphicon-euro" aria-hidden="true"> </span>
-                    {{ total }}</p>
-                <a href="{% url 'checkout' %}" class="btn btn-success checkout-btn" role="button"><span
-                        class="glyphicon glyphicon-ok-sign" aria-hidden="true"></span> Checkout</a>
-                {% else %}
-                <div class="empty-cart-wrapper ha">
-                    <p class="no-cart-items">No products in your shopping cart</p>
-                    <a id="emptycart-product-link" href="{% url 'products' %}"><span
-                            class="glyphicon glyphicon-apple active-app"></span></a>
-                </div>
+            <p class="product-description">{{ item.product.description|truncatewords:12 }}</p>
+            <div class="product-stats">
+                <div class="stats-key"><i class="fa fa-eye"></i></div>
+                <div class="stats-value">{{ item.product.view_count }}</div>
+                <div class="stats-key"><i class="fa fa-comment"></i></div>
+                <div class="stats-value">{{ item.product.review_count }}</div>
+                <div class="stats-key">Sold:</div>
+                <div class="stats-value">{{ item.product.ordered_pcs }}</div>
             </div>
+            <br>
+            <p class="price"><b>Our price: {{ item.product.price }} EUR</b></p>
+            <form class="form-inline cart-form" method="post" action="{% url 'adjust_cart' item.id %}">
+                {% csrf_token %}
+                <div class="form-group">
+                    <label for="exampleInputAmount" class="sr-only">New Qty</label>
+                    <div class="input-group">
+                        <div class="input-group-addon">Qty</div>
+                        <input name="quantity" type="number" min="0" max="999" class="form-control">
+                        <div class="input-group-addon">{{item.quantity}}</div>
+                    </div>
+                </div>
+                <div class="amend-btn-wrapper ha">
+                    <button type="submit" class="btn btn-primary amend-btn"><span class="glyphicon glyphicon-edit"
+                            aria-hidden="true"></span> Amend</button>
+                </div>
+            </form>
         </div>
-        {% endif %}
     </div>
+    {% endfor %}
+
+    <div class="cart-summary-wrapper ha">
+
+        <div class="cart-summary">
+            {% if shippingfee == "FREE" %}
+            <p>FREE SHIPPING!</p>
+            {% else %}
+            <p class="shipping-fee ha">incl. {{shippingfee}} EUR Shipping</p>
+            {% endif %}
+            <p id="totalamount" class="ha">Total <span class="glyphicon glyphicon-euro" aria-hidden="true"> </span>
+                {{ total }}</p>
+            <a href="{% url 'checkout' %}" class="btn btn-success checkout-btn" role="button"><span
+                    class="glyphicon glyphicon-ok-sign" aria-hidden="true"></span> Checkout</a>
+            {% else %}
+            <div class="empty-cart-wrapper ha">
+                <p class="no-cart-items">No products in your shopping cart</p>
+                <a id="emptycart-product-link" href="{% url 'products' %}"><span
+                        class="glyphicon glyphicon-apple active-app"></span></a>
+            </div>
+        </div>
+    </div>
+    {% endif %}
 </div>
 {% endblock %}
