--- a/products/templates/productdetail.html
+++ b/products/templates/productdetail.html
@@ -6,74 +6,71 @@
 {% block content %}
 
 <div class="product-wrapper ha">
+    <div class="page-headline ha">Product details</div>
+    <div class="productcard display panel panel-default">
+        <div class="panel-body">
 
-    <div class="row row-flex">
-        <div class="col-xs-10 col-xs-offset-1 col-sm-offset-0 col-sm-6 col-md-4 display panel panel-default">
-            <div class="panel-body">
+            <img class="product-image" src="{{ MEDIA_URL }}{{product.image}}" alt="image of {{product.name}}">
+            <div class="btn-bar-wrapper">
 
                 {% if product.id in wishlist %}
                 <form class="wishform" method="POST" action="{% url 'remove_from_wishlist' product.id %}">
                     {% csrf_token %}
-                        <button class="remove-wish-btn" type="submit"><i class="fa fa-star staricon-added"></i></button>
+                    <button class="remove-wish-btn" type="submit"><i class="fa fa-star staricon-added"></i></button>
                 </form>
                 {% else %}
                 <form class="wishform" method="POST" action="{% url 'add_to_wishlist' product.id %}">
                     {% csrf_token %}
-                        <button class="add-wish-btn" type="submit"><i
-                                class="fa fa-star staricon-not-added"></i></button>
+                    <button class="add-wish-btn" type="submit"><i class="fa fa-star staricon-not-added"></i></button>
                 </form>
                 {% endif %}
 
                 {% if product.name in purchased_products %}
                 <form class="revform" method="POST" action="{% url 'new_review' product.id %}">
                     {% csrf_token %}
-                        <button class="add-review-btn" type="submit"><i class="fa fa-comment"></i></button>
+                    <button class="add-review-btn" type="submit"><i class="fa fa-comment"></i></button>
                 </form>
                 {% endif %}
+            </div>
 
+            <div class="product-headline"><b>{{product.name}}</b></div>
 
-                <img class="product-image" src="{{ MEDIA_URL }}{{product.image}}" alt="image of {{product.name}}">
+            <p class="product-description">{{ product.description }}</p>
 
-                <div class="product-headline"><b>{{product.name}}</b></div>
-
-                <p class="product-description">{{ product.description }}</p>
-
-                <div class="product-stats">
-                    <div class="stats-key"><i class="fa fa-eye"></i></div>
-                    <div class="stats-value">{{ product.view_count }}</div>
-                    <div class="stats-key"><i class="fa fa-comment"></i></div>
-                    {% if product.review_count > 0 %}
-                    <div class="stats-value">
-                        <a href="{% url 'get_reviews' product.id %}">{{ product.review_count }}</a>
-                    </div>
-                    {% else %}
-                    <div class="stats-value">{{ product.review_count }}</div>
-                    {% endif %}
-                    <div class="stats-key">Sold: </div>
-                    <div class="stats-value"> {{ product.ordered_pcs }}</div>
-                    <div class="stats-key">Origin: </div>
-                    <div class="stats-value"> {{ product.origin }}</div>
-                    <div class="stats-key">Since: </div>
-                    <div class="stats-value"> {{ product.first_developed }}</div>
-                    <div class="stats-key">Use: </div>
-                    <div class="stats-value"> {{ product.use }}</div>
+            <div class="product-stats">
+                <div class="stats-key"><i class="fa fa-eye"></i></div>
+                <div class="stats-value">{{ product.view_count }}</div>
+                <div class="stats-key"><i class="fa fa-comment"></i></div>
+                {% if product.review_count > 0 %}
+                <div class="stats-value">
+                    <a href="{% url 'get_reviews' product.id %}">{{ product.review_count }}</a>
                 </div>
-                <br>
-                <p><b>Our price: {{ product.price }} EUR</b></p>
-                <form method="POST" action="{% url 'add_to_cart' product.id %}">
-                    {% csrf_token %}
-                    <div class="input-group">
-                        <input name="quantity" type="number" min="1" max="999" class="form-control"
-                            placeholder="Quantity">
-                        <span class="input-group-btn">
-                            <button class="btn btn-success" type="submit"><i
-                                    class="fa fa-shopping-cart addcard-icon"></i></button>
-                        </span>
-                    </div>
-                </form>
-                <div id="to-products-btn-wrapper" class="ha">
-                    <a id="to-products-btn" href="{% url 'products' %}" class="btn">Back Products</a>
+                {% else %}
+                <div class="stats-value">{{ product.review_count }}</div>
+                {% endif %}
+                <div class="stats-key">Sold: </div>
+                <div class="stats-value"> {{ product.ordered_pcs }}</div>
+                <div class="stats-key">Origin: </div>
+                <div class="stats-value"> {{ product.origin }}</div>
+                <div class="stats-key">Since: </div>
+                <div class="stats-value"> {{ product.first_developed }}</div>
+                <div class="stats-key">Use: </div>
+                <div class="stats-value"> {{ product.use }}</div>
+            </div>
+            <br>
+            <p class="price"><b>Our price: {{ product.price }} EUR</b></p>
+            <form class="cart-form" method="POST" action="{% url 'add_to_cart' product.id %}">
+                {% csrf_token %}
+                <div class="input-group">
+                    <input name="quantity" type="number" min="1" max="999" class="form-control" placeholder="Quantity">
+                    <span class="input-group-btn">
+                        <button class="btn btn-success" type="submit"><i
+                                class="fa fa-shopping-cart addcard-icon"></i></button>
+                    </span>
                 </div>
+            </form>
+            <div id="to-products-btn-wrapper" class="ha">
+                <a id="to-products-btn" href="{% url 'products' %}" class="btn">Back Products</a>
             </div>
         </div>
     </div>
