--- a/products/templates/products.html
+++ b/products/templates/products.html
@@ -7,8 +7,6 @@
 
 <div class="product-wrapper ha">
     <div class="page-headline ha">Daily fresh apples!</div>
-
-    <div class="row row-flex">
         <div class="search-field-wrapper ha">
             <div class="display">
                 <form action="{% url 'product_search' %}" method="GET">
@@ -22,31 +20,31 @@
         {% if products %}
         {% for product in products %}
 
-        <div class="col-xs-10 col-xs-offset-1 col-sm-offset-0 col-sm-6 col-md-4 display panel panel-default">
+        <div class="productcard display panel panel-default">
             <div class="panel-body">
-                {% if product.id in wishlist %}
-                <form class="wishform" method="POST"
-                    action="{% url 'remove_from_wishlist' product.id %}">
-                    {% csrf_token %}
-                        <button class="remove-wish-btn" type="submit"><i class="fa fa-star staricon-added"></i></button>
-                </form>
-                {% else %}
-                <form class="wishform" method="POST"
-                    action="{% url 'add_to_wishlist' product.id %}">
-                    {% csrf_token %}
-                        <button class="add-wish-btn" type="submit"><i class="fa fa-star staricon-not-added"></i></button>
-                </form>
-                {% endif %}
-
-                {% if product.name in purchased_products %}
-                <form class="revform" method="POST" action="{% url 'new_review' product.id %}">
-                    {% csrf_token %}
-                        <button class="add-review-btn" type="submit"><i class="fa fa-comment"></i></button>
-                </form>
-                {% endif %}
-
                 <img class="product-image" src="{{ MEDIA_URL }}{{product.image}}" alt="image of {{product.name}}">
-
+                <div class="btn-bar-wrapper">
+                    {% if product.id in wishlist %}
+                    <form class="wishform" method="POST"
+                        action="{% url 'remove_from_wishlist' product.id %}">
+                        {% csrf_token %}
+                            <button class="remove-wish-btn" type="submit"><i class="fa fa-star staricon-added"></i></button>
+                    </form>
+                    {% else %}
+                    <form class="wishform" method="POST"
+                        action="{% url 'add_to_wishlist' product.id %}">
+                        {% csrf_token %}
+                            <button class="add-wish-btn" type="submit"><i class="fa fa-star staricon-not-added"></i></button>
+                    </form>
+                    {% endif %}
+    
+                    {% if product.name in purchased_products %}
+                    <form class="revform" method="POST" action="{% url 'new_review' product.id %}">
+                        {% csrf_token %}
+                            <button class="add-review-btn" type="submit"><i class="fa fa-comment"></i></button>
+                    </form>
+                    {% endif %}
+                </div>
                 <h3><a class="product-headline" href="{% url 'product_detail' product.id %}"><b>{{product.name}}</b></a>
                 </h3>
 
@@ -66,8 +64,8 @@
                     <div class="stats-value">{{ product.ordered_pcs }}</div>
                 </div>
                 <br>
-                <p><b>Our price: {{ product.price }} EUR</b></p>
-                <form method="POST" action="{% url 'add_to_cart' product.id %}">
+                <p class="price"><b>Our price: {{ product.price }} EUR</b></p>
+                <form class="cart-form" method="POST" action="{% url 'add_to_cart' product.id %}">
                     {% csrf_token %}
                     <div class="input-group">
                         <input name="quantity" type="number" min="1" max="999" class="form-control"
@@ -84,7 +82,6 @@
         {% else %}
         <p>No results have been found.</p>
         {% endif %}
-    </div>
 </div>
 
 {% endblock %}
