--- a/static/scss/_partials/landscape-desktop/pages/_login-page.scss
+++ b/static/scss/_partials/landscape-desktop/pages/_login-page.scss
@@ -1,6 +1,10 @@
 .login-wrapper {
     align-content: center;
-    padding-bottom: 25vw;
+    padding: {
+        top: 2vw;
+        bottom: 25vw;
+
+    }
     background-color: #9e988fcb;
     min-height: 85vh;
 }
