--- a/static/scss/_partials/portrait-mobile/pages/_checkout-page.scss
+++ b/static/scss/_partials/portrait-mobile/pages/_checkout-page.scss
@@ -1,7 +1,13 @@
 .checkout-wrapper {
-    padding-bottom: 25vw;
+    padding: {
+        top: 2vw;
+        bottom: 25vw;
+
+    }
+
     background-color: #9e988fcb;
-    min-height: 85vh;}
+    min-height: 85vh;
+}
 
 caption p {
     word-wrap: break-word;
