--- a/templates/base.html
+++ b/templates/base.html
@@ -30,76 +30,76 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="/"><span id="brandicon" class="glyphicon glyphicon-apple"></span> The
+                <a class="navbar-brand" href="/" title="Index The Apple Shop"><span id="brandicon" class="glyphicon glyphicon-apple"></span> The
                     Apple Shop</a>
             </div>
             <div id="navbar" class="navbar-collapse collapse">
                 <ul class="nav navbar-nav navbar-right desktop-navbar">
                     <li class="desktop-navbar-icons">
                         {% if app_path == "/" %}
-                        <a href="{% url 'index' %}"><i class="fa fa-home active-app"></i></a>
+                        <a href="{% url 'index' %}" title="Our Bestsellers"><i class="fa fa-home active-app"></i></a>
                         {% else %}
-                        <a href="{% url 'index' %}"><i class="fa fa-home"></i></a>
+                        <a href="{% url 'index' %}" title="Our Bestsellers"><i class="fa fa-home"></i></a>
                         {% endif %}
                     </li>
                     <li class="desktop-navbar-icons">
-                        {% if "product" in app_path %}
-                        <a href="{% url 'products' %}"><span class="glyphicon glyphicon-apple active-app"></span></a>
+                        {% if "products" in app_path %}
+                        <a href="{% url 'products' %}" title="Products"><span class="glyphicon glyphicon-apple active-app"></span></a>
                         {% else %}
-                        <a href="{% url 'products' %}"><span class="glyphicon glyphicon-apple"></span></a>
+                        <a href="{% url 'products' %}" title="Products"><span class="glyphicon glyphicon-apple"></span></a>
                         {% endif %}
                     </li>
                     <li class="desktop-navbar-icons">
-                        {% if "review" in app_path %}
-                        <a href="{% url 'get_reviews' %}"><i class="fa fa-comment active-app"></i></a>
+                        {% if "reviews" in app_path %}
+                        <a href="{% url 'get_reviews' %}" title="Reviews"><i class="fa fa-comment active-app"></i></a>
                         {% else %}
-                        <a href="{% url 'get_reviews' %}"><i class="fa fa-comment"></i></a>
+                        <a href="{% url 'get_reviews' %}" title="Reviews"><i class="fa fa-comment"></i></a>
                         {% endif %}
                     </li>
                     <li class="desktop-navbar-icons">
                         {% if "wishlist" in app_path %}
-                        <a href="{% url 'view_wishlist' %}"><i class="fa fa-star active-app"></i>
+                        <a href="{% url 'view_wishlist' %}" title="Wishlist"><i class="fa fa-star active-app"></i>
                             {% else %}
-                            <a href="{% url 'view_wishlist' %}"><i class="fa fa-star"></i>
+                            <a href="{% url 'view_wishlist' %}" title="Wishlist"><i class="fa fa-star"></i>
                                 {% endif %}
                                 {%if wishlist_count > 0 %}
-                                <label class="badge-wishlist badge-warning"><b>{{ wishlist_count }}</b></label>
+                                <label class="badge badge-wishlist badge-warning"><b>{{ wishlist_count }}</b></label>
                                 {% endif %}
                             </a>
                     </li>
                     {% if user.is_authenticated %}
                     <li class="desktop-navbar-icons">
                         {% if "profile" in app_path %}
-                        <a href="{% url 'profile' %}"><i class="fa fa-user active-app"></i></a>
+                        <a href="{% url 'profile' %}" title="Profile"><i class="fa fa-user active-app"></i></a>
                         {% else %}
-                        <a href="{% url 'profile' %}"><i class="fa fa-user"></i></a>
+                        <a href="{% url 'profile' %}" title="Profile"><i class="fa fa-user"></i></a>
                         {% endif %}
                     </li>
-                    <li><a href="{% url 'logout' %}"><i class="fa fa-sign-out"></i></a></li>
+                    <li class="desktop-navbar-icons"><a href="{% url 'logout' %}" title="Logout"><i class="fa fa-sign-out"></i></a></li>
                     {%  else %}
                     <li class="desktop-navbar-icons">
                         {% if "register" in app_path %}
-                        <a href="{% url 'registration' %}"><i class="fa fa-user-plus active-app"></i></a>
+                        <a href="{% url 'registration' %}" title="Registration"><i class="fa fa-user-plus active-app"></i></a>
                         {%  else %}
-                        <a href="{% url 'registration' %}"><i class="fa fa-user-plus"></i></a>
+                        <a href="{% url 'registration' %}" title="Registration"><i class="fa fa-user-plus"></i></a>
                         {% endif %}
                     </li>
                     <li class="desktop-navbar-icons">
                         {% if "login" in app_path %}
-                        <a href="{% url 'login' %}"><i class="fa fa-sign-in active-app"></i></a>
+                        <a href="{% url 'login' %}" title="Login"><i class="fa fa-sign-in active-app"></i></a>
                         {%  else %}
-                        <a href="{% url 'login' %}"><i class="fa fa-sign-in"></i></a>
+                        <a href="{% url 'login' %}" title="Login"><i class="fa fa-sign-in"></i></a>
                         {% endif %}
                     </li>
                     {% endif %}
                     <li class="desktop-navbar-icons">
                         {% if "cart" in app_path %}
-                        <a href="{% url 'view_cart' %}"><i class="fa fa-shopping-cart active-app"></i>
+                        <a href="{% url 'view_cart' %}" title="Shopping Cart"><i class="fa fa-shopping-cart active-app"></i>
                             {% else %}
-                            <a href="{% url 'view_cart' %}"><i class="fa fa-shopping-cart"></i>
+                            <a href="{% url 'view_cart' %}" title="Shopping Cart"><i class="fa fa-shopping-cart"></i>
                                 {% endif %}
                                 {%if product_count > 0 %}
-                                <label class="badge-cart badge-warning"><b>{{ product_count }}</b></label>
+                                <label class="badge badge-cart badge-warning"><b>{{ product_count }}</b></label>
                                 {% endif %}
                             </a>
                     </li>
@@ -107,33 +107,31 @@
                 <ul class="nav navbar-nav navbar-right mobile-navbar">
                     <li class="mobile-list-items">
                         {% if app_path == "/" %}
-                        <a href="{% url 'index' %}"><i class="fa fa-home active-app"></i> Topsellers</a>
+                        <a href="{% url 'index' %}" title="Our Bestsellers"><i class="fa fa-home active-app"></i> Topsellers</a>
                         {% else %}
-                        <a href="{% url 'index' %}"><i class="fa fa-home"></i> Topsellers</a>
+                        <a href="{% url 'index' %}" title="Our Bestsellers"><i class="fa fa-home"></i> Topsellers</a>
                         {% endif %}
                     </li>
                     <li class="mobile-list-items">
-                        {% if "product" in app_path %}
-                        <a href="{% url 'products' %}"><span class="glyphicon glyphicon-apple active-app"></span>
+                        {% if "products" in app_path %}
+                        <a href="{% url 'products' %}" title="Products"><span class="glyphicon glyphicon-apple active-app"></span>
                             Products</a>
                         {% else %}
-                        <a href="{% url 'products' %}"><span class="glyphicon glyphicon-apple"></span> Products</a>
+                        <a href="{% url 'products' %}" title="Products"><span class="glyphicon glyphicon-apple"></span> Products</a>
                         {% endif %}
                     </li>
                     <li class="mobile-list-items">
-                        {% if "review" in app_path %}
-                        <a href="{% url 'get_reviews' %}"><i class="fa fa-comment active-app"></i> Reviews</a>
+                        {% if "reviews" in app_path %}
+                        <a href="{% url 'get_reviews' %}" title="Reviews"><i class="fa fa-comment active-app"></i> Reviews</a>
                         {% else %}
-                        <a href="{% url 'get_reviews' %}"><i class="fa fa-comment"></i> Reviews</a>
+                        <a href="{% url 'get_reviews' %}" title="Reviews"><i class="fa fa-comment"></i> Reviews</a>
                         {% endif %}
                     </li>
                     <li class="mobile-list-items">
                         {% if "wishlist" in app_path %}
-                        {{app_path}}
-
-                        <a href="{% url 'view_wishlist' %}"><i class="fa fa-star active-app"></i> Wishlist
+                        <a href="{% url 'view_wishlist' %}" title="Wishlist"><i class="fa fa-star active-app"></i> Wishlist
                             {% else %}
-                            <a href="{% url 'view_wishlist' %}"><i class="fa fa-star"></i> Wishlist
+                            <a href="{% url 'view_wishlist' %}" title="Wishlist"><i class="fa fa-star"></i> Wishlist
                                 {% endif %}
                                 {%if wishlist_count > 0 %}
                                 <label class="badge badge-wishlist badge-warning"><b>{{ wishlist_count }}</b></label>
@@ -143,34 +141,34 @@
                     {% if user.is_authenticated %}
                     <li class="mobile-list-items">
                         {% if "profile" in app_path %}
-                        <a href="{% url 'profile' %}"><i class="fa fa-user active-app"></i> Profile</a>
+                        <a href="{% url 'profile' %}" title="Profile"><i class="fa fa-user active-app"></i> Profile</a>
                         {% else %}
-                        <a href="{% url 'profile' %}"><i class="fa fa-user"></i> Profile</a>
+                        <a href="{% url 'profile' %}" title="Profile"><i class="fa fa-user"></i> Profile</a>
                         {% endif %}
                     </li>
                     <li class="mobile-list-items">
-                        <a href="{% url 'logout' %}"><i class="fa fa-sign-out"></i> Log Out</a></li>
+                        <a href="{% url 'logout' %}" title="Logout"><i class="fa fa-sign-out"></i> Log Out</a></li>
                     {% else %}
                     <li class="mobile-list-items">
                         {% if "register" in app_path %}
-                        <a href="{% url 'registration' %}"><i class="fa fa-user-plus active-app"></i> Register</a>
+                        <a href="{% url 'registration' %}" title="Registration"><i class="fa fa-user-plus active-app"></i> Register</a>
                         {%  else %}
-                        <a href="{% url 'registration' %}"><i class="fa fa-user-plus"></i> Register</a>
+                        <a href="{% url 'registration' %}" title="Registration"><i class="fa fa-user-plus"></i> Register</a>
                         {% endif %}
                     </li>
                     <li class="mobile-list-items">
                         {% if "login" in app_path %}
-                        <a href="{% url 'login' %}"><i class="fa fa-sign-in active-app"></i> Log In</a>
+                        <a href="{% url 'login' %}" title="Login"><i class="fa fa-sign-in active-app"></i> Log In</a>
                         {%  else %}
-                        <a href="{% url 'login' %}"><i class="fa fa-sign-in"></i> Log In</a>
+                        <a href="{% url 'login' %}" title="Login"><i class="fa fa-sign-in"></i> Log In</a>
                         {% endif %}
                     </li>
                     {% endif %}
                     <li class="mobile-list-items">
                         {% if "cart" in app_path %}
-                        <a href="{% url 'view_cart' %}"><i class="fa fa-shopping-cart active-app"></i> Cart
+                        <a href="{% url 'view_cart' %}" title="Shopping Cart"><i class="fa fa-shopping-cart active-app"></i> Cart
                             {% else %}
-                            <a href="{% url 'view_cart' %}"><i class="fa fa-shopping-cart"></i> Cart
+                            <a href="{% url 'view_cart' %}" title="Shopping Cart"><i class="fa fa-shopping-cart"></i> Cart
                                 {% endif %}
                                 {%if product_count > 0 %}
                                 <label class="badge badge-cart badge-warning"><b>{{ product_count }}</b></label>
@@ -201,24 +199,24 @@
                 <ul class="nav navbar-nav navbar-right" id="bottombar">
                     <li class="quicklinks">
                         {% if app_path == "/" %}
-                        <a href="{% url 'index' %}"><i class="fa fa-home active-app"></i></a>
+                        <a href="{% url 'index' %}" title="Our Bestsellers"><i class="fa fa-home active-app"></i></a>
                         {% else %}
-                        <a href="{% url 'index' %}"><i class="fa fa-home"></i></a>
+                        <a href="{% url 'index' %}" title="Our Bestsellers"><i class="fa fa-home"></i></a>
                         {% endif %}
                     </li>
                     <li class="quicklinks">
-                        {% if "product" in app_path %}
-                        <a href="{% url 'products' %}"><span
+                        {% if "products" in app_path %}
+                        <a href="{% url 'products' %}" title="Products"><span
                                 class="glyphicon glyphicon-apple products-icon active-app"></a>
                         {% else %}
-                        <a href="{% url 'products' %}"><span class="glyphicon glyphicon-apple products-icon"></a>
+                        <a href="{% url 'products' %}" title="Products"><span class="glyphicon glyphicon-apple products-icon"></a>
                         {% endif %}
                     </li>
                     <li class="quicklinks">
                         {% if "wishlist" in app_path %}
-                        <a href="{% url 'view_wishlist' %}"><i class="fa fa-star active-app"></i>
+                        <a href="{% url 'view_wishlist' %}" title="Wishlist"><i class="fa fa-star active-app"></i>
                             {% else %}
-                            <a href="{% url 'view_wishlist' %}"><i class="fa fa-star"></i>
+                            <a href="{% url 'view_wishlist' %}" title="Wishlist"><i class="fa fa-star"></i>
                                 {% endif %}
                                 {%if wishlist_count > 0 %}
                                 <label id="wishlist-badge-bottom" class="badge badge-wishlist badge-warning">{{ wishlist_count }}</label>
@@ -227,9 +225,9 @@
                     </li>
                     <li class="quicklinks">
                         {% if "cart" in app_path %}
-                        <a href="{% url 'view_cart' %}"><i class="fa fa-shopping-cart active-app"></i>
+                        <a href="{% url 'view_cart' %}" title="Shopping Cart"><i class="fa fa-shopping-cart active-app"></i>
                             {% else %}
-                            <a href="{% url 'view_cart' %}"><i class="fa fa-shopping-cart"></i>
+                            <a href="{% url 'view_cart' %}" title="Shopping Cart"><i class="fa fa-shopping-cart"></i>
                                 {% endif %}
                                 {%if product_count > 0 %}
                                 <label id="cart-badge-bottom" class="badge badge-cart badge-warning">{{ product_count }}</label>
@@ -239,14 +237,13 @@
 
                     <li class="quicklinks">
                         {% if "accounts" in app_path %}
-                        <a href="{% url 'profile' %}"><i class="fa fa-user active-app"></i> </a>
+                        <a href="{% url 'profile' %}" title="Profile"><i class="fa fa-user active-app"></i> </a>
                         {% else %}
-                        <a href="{% url 'profile' %}"><i class="fa fa-user"></i></a>
+                        <a href="{% url 'profile' %}" title="Profile"><i class="fa fa-user"></i></a>
                         {% endif %}
                     </li>
                 </ul>
             </div>
-
         </div>
     </nav>
     <script src="{% static 'js/appleshop.js' %}"></script>
