--- a/wishlist/templates/wishlist.html
+++ b/wishlist/templates/wishlist.html
@@ -7,53 +7,50 @@
 
 <div class="wishlist-wrapper ha">
     <div class="page-headline ha">Your apples wishlist</div>
-    <div class="row row-flex">
-        {% if wishlist_items %}
-        {% for item in wishlist_items %}
-        <div class="col-xs-10 col-xs-offset-1 col-sm-offset-0 col-sm-6 col-md-4 display panel panel-default">
-            <div class="panel-body">
-
+    {% if wishlist_items %}
+    {% for item in wishlist_items %}
+    <div class="productcard display panel panel-default">
+        <div class="panel-body">
+            <img class="product-image" src="{{ MEDIA_URL }}{{item.product.image}}" alt="image of {{item.product.name}}">
+            
+            <div class="btn-bar-wrapper">
                 <a class="wishlist-remove-btn" href="{% url 'remove_from_wishlist' item.product.id %}"><i
                         class="fa fa-times-circle"></i></a>
-
-                <img class="product-image" src="{{ MEDIA_URL }}{{item.product.image}}"
-                    alt="image of {{item.product.name}}">
-                <h3><a class="product-headline"
-                        href="{% url 'product_detail' item.product.id %}"><b>{{item.product.name}}</b></a>
-                </h3>
-
-                <p class="product-description">{{ item.product.description|truncatewords:12 }}</p>
-                <div class="product-stats">
-                    <div class="stats-key"><i class="fa fa-eye"></i></div>
-                    <div class="stats-value">{{ item.product.view_count }}</div>
-                    <div class="stats-key"><i class="fa fa-comment"></i></div>
-                    <div class="stats-value">{{ item.product.review_count }}</div>
-                    <div class="stats-key">Sold:</div>
-                    <div class="stats-value">{{ item.product.ordered_pcs }}</div>
-                </div>
-                <br>
-                <p><b>Our price: {{ item.product.price }} EUR</b></p>
-                <form method="POST" action="{% url 'add_to_cart' item.product.id %}">
-                    {% csrf_token %}
-                    <div class="input-group">
-                        <input name="quantity" type="number" min="1" max="999" class="form-control"
-                            placeholder="Quantity">
-                        <span class="input-group-btn">
-                            <button class="btn btn-success" type="submit"><i
-                                    class="fa fa-shopping-cart addcard-icon"></i></button>
-                        </span>
-                    </div>
-                </form>
             </div>
+            <h3><a class="product-headline"
+                    href="{% url 'product_detail' item.product.id %}"><b>{{item.product.name}}</b></a>
+            </h3>
+
+            <p class="product-description">{{ item.product.description|truncatewords:12 }}</p>
+            <div class="product-stats">
+                <div class="stats-key"><i class="fa fa-eye"></i></div>
+                <div class="stats-value">{{ item.product.view_count }}</div>
+                <div class="stats-key"><i class="fa fa-comment"></i></div>
+                <div class="stats-value">{{ item.product.review_count }}</div>
+                <div class="stats-key">Sold:</div>
+                <div class="stats-value">{{ item.product.ordered_pcs }}</div>
+            </div>
+            <br>
+            <p class="price"><b>Our price: {{ item.product.price }} EUR</b></p>
+            <form class="cart-form" method="POST" action="{% url 'add_to_cart' item.product.id %}">
+                {% csrf_token %}
+                <div class="input-group">
+                    <input name="quantity" type="number" min="1" max="999" class="form-control" placeholder="Quantity">
+                    <span class="input-group-btn">
+                        <button class="btn btn-success" type="submit"><i
+                                class="fa fa-shopping-cart addcard-icon"></i></button>
+                    </span>
+                </div>
+            </form>
         </div>
-        {% endfor %}
-        {% else %}
-        <div id="empty-wishlist-wrapper">
-            <p>No products in your wishlist.</p>
-            <a id="empty-wishlist-product-link" class="ha" href="{% url 'products' %}"><span
-                    class="glyphicon glyphicon-apple active-app"></span></a>
-        </div>
-        {% endif %}
     </div>
+    {% endfor %}
+    {% else %}
+    <div id="empty-wishlist-wrapper">
+        <p>No products in your wishlist.</p>
+        <a id="empty-wishlist-product-link" class="ha" href="{% url 'products' %}"><span
+                class="glyphicon glyphicon-apple active-app"></span></a>
+    </div>
+    {% endif %}
 </div>
 {% endblock %}
